--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -1,99 +1,180 @@
-*{
-    padding:0;
+* {
     margin: 0;
-    text-decoration: none;
-    list-style: none;
     box-sizing: border-box;
-}
+  }
 
-nav{
-    background: #2fcdcd;
+  html {
+    height: 100%;
+  }
+  
+  body {
+    font-family: sans-serif;
+    margin: 0; /*Eliminamos los margenes de la ventana*/
+    position: relative; /*Para que el footer se quede al final*/
+    min-height: 100vh; /*Para que el body mida como minimo lo que mida el viewport. Esto hace que el footer se quede al final*/
+  }
+  
+  .header {
+    background-color: #0769e9;
     height: 80px;
-    width:100%
-}
-.enlace{
-    position: absolute;
-    padding: 20px 50px
-}
-.logo{
-    height: 40px;
-}
-nav ul{
-    float: right;
-    margin-right: 20px;
-}
-nav ul li{
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
-}
-nav ul li a{
-    color: #fff;
-    font-size: 18px;
-    padding: 7px 13px;
-    border-radius: 3px;
-    text-transform: uppercase;
-}
-li a.active, li a:hover{
-    background: #000090;
-    transition: 5ms;
-}
-.checkbtn{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+  }
+  
+  .nav {
+    display: flex;
+    justify-content: space-between;
+  
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  
+  .nav-link {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+  }
+
+  .logo {
     font-size: 30px;
-    color:#fff;
-    float: right;
+    font-weight: bold;
+    padding: 0 40px;
     line-height: 80px;
+  }
+  
+  .nav-menu {
+    display: flex;
     margin-right: 40px;
+    list-style: none;
+  }
+  
+  .nav-menu-item {
+    font-size: 18px;
+    margin: 0 10px;
+    line-height: 80px;
+    text-transform: uppercase;
+    width: max-content;
+  }
+
+  .container-body {
+    width: 70%;
+    min-width: 320px;
+    margin: 0 auto;
+    display: flow-root;
+    max-width: 100%;
+}
+  
+  .nav-menu-link {
+    padding: 8px 12px;
+    border-radius: 20px;
+    transition: all 500ms ease;
+  }
+
+  .nav-menu-link:hover,
+  .nav-menu-link_active {
+    background-color: #083057;
+  }
+
+  footer {
+    background: #0769e9;
+    text-align: center;
+    padding: 0.5rem 0;
+    position: absolute; /*Para que el footer se quede al final*/
+    bottom: 0; /*Para que el footer se quede al final*/
+    width: 100%; /*Para que el footer se quede al final*/
+  }
+
+  .redes-sociales {
+      display: flex;
+      justify-content: center;
+  } 
+
+  .redes-sociales i {
+    font-size: 30px;
+    padding: 20px;
+    color: white;
+    transition: all 500ms ease;
+  }
+
+  .redes-sociales i:hover {
+    border-radius: 20px;
+    background: #083057;
+  }
+
+  footer .titulo-seccion,
+  footer .copy {
+      color: white;
+      text-align: center;
+      padding-top: 20px;
+  }
+  
+  /* TOGGLE */
+  .nav-toggle {
+    color: white;
+    background: none;
+    border: none;
+    font-size: 30px;
+    padding: 0 20px;
+    line-height: 60px;
     cursor: pointer;
+  
     display: none;
-}
-#check{
-    display: none;
-}
+  }
 
-section{
-    background: url(logo.png)no-repeat;
-    background-size: cover;
-    background-position: center center;
-    height: calc(100vh - 80px);
-
-}
-@media(max-Width: 952px){
-    .enlace{
-        padding-left:20px
+   /* MOBILE */
+  @media (max-width: 768px) {
+    body {
+      padding-top: 70px;
     }
-    nav ul li a{
-        font-size: 16px;
+  
+    .header {
+      height: 60px;
     }
-}
-@media(max-Width: 858px){
-    .checkbtn{
-        display:block;
+  
+    .logo {
+      font-size: 25px;
+      padding: 0 20px;
+      line-height: 60px;
     }
-    ul{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #2c3e50;
-        top:80px;
-        left: -100%;
-        text-align:center;
-        transition: all .5ms ;
+  
+    .nav-menu {
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+      background-color: #2c3e50;
+      position: fixed;
+      top: 60px;
+      width: 100%;
+      padding: 20px 0;
+  
+      height: calc(100% - 60px);
+      overflow-y: auto;
+  
+      left: 100%;
+      transition: left 0.3s;
     }
-    nav ul li{
-        display: block;
-        margin:50px 0;
-        line-height: 30px;
+  
+    .nav-menu-item {
+      line-height: 70px;
     }
-    nav ul li a{
-        font-size: 20px;
-
+  
+    .nav-menu-link:hover,
+    .nav-menu-link_active {
+      background: none;
+      color: #83c5f7;
     }
-    li a:hover,li a.active{
-        background: none;
-        color: red;
+  
+    .nav-toggle {
+      display: block;
     }
-    #check:checked ~ul{
-        left:0;
+  
+    .nav-menu_visible {
+      left: 0;
+    }
+  
+    .nav-toggle:focus:not(:focus-visible) {
+      outline: none;
     }
 }
