--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -1,52 +1,126 @@
-html, body {
-   padding: 0;
-   margin: 0; 
+* {
+  transition: all 0.3s;
 }
-
 
 body {
-    background: #0769e9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  padding: 0;
+  background-image: url(../img/fondo_quiz.jpg);
+  margin: 0;
+  text-align: center;
 }
 
-#quiz {
-   background: white;
-   width: 30em;
-   flex-wrap: wrap;
-   padding: 4rem;
-   text-align: center;
+.contenedor {
+  width: 98vw;
+  height: 97vh;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 20px;
 }
 
-#question {
-    font-size: 30px;
-    font-family: 'Courier New', Courier, monospace;
+.encabezado {
+  position: relative;
+  background: #000056;
+  min-width: 300px;
+  width: 70%;
+  max-width: 600px;
+  padding: 10px;
+  color: white;
+  font-weight: bold;
+  margin-bottom: 30px;
+  border-radius: 20px;
 }
 
-.button {
-    background-color: #0769e9;
-    color: white;
-    width: 250px;
+.titulo-quiz {
+  opacity: 0.3;
+  text-align: left;
+}
+
+.pregunta {
+  padding: 10px;
+  }
+
+
+
+.imagen {
+  object-fit: cover;
+  height: 0px;
+  width: 0px;
+}
+
+.contenedor-btnInicio {
+  min-width: 300px;
+  width: 30%;
+  max-width: 400px;
+  
+}
+
+.btnReiniciar {
+    float: right;
+}
+
+.btnInicio {
+    float: left;
+}
+
+.contenedor-btnInicio button {
+    border-radius: 10px;
+    margin-top: 20px;
+    width: 120px;
+    height: 50px;
     font-size: 20px;
-    border-radius: .3rem;
-    padding: 10px 20px;
-    margin: 10px 40px 10px; 
-}
-
-.button:hover {
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 30px;
+    background: #000056;
+    font-weight: bold;
+    color: white;
     cursor: pointer;
-    background: #083057;
+    transition: all 500ms ease;
+    font-family: sans-serif;
+    border: 5px solid black;
 }
 
-hr {border: 0; 
-    height: 0; 
-    box-shadow: 0 1px 5px 1px darkblue;
+.contenedor-btnInicio button:hover {
+    background: rgb(1, 1, 161);
+    transform: scale(1.1);
 }
 
- .animated-shadow {
-   font: normal 100px Varela Round, sans-serif;
+.btn {
+  background: #000056;
+  width: 60%;
+  color: white;
+  font-weight: bold;
+  max-width: 550px;
+  padding: 10px;
+  margin: 5px;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: all 500ms ease;
+}
+
+.btn:hover {
+  transform: scale(1.05);
+  background: #1e1efffe;
+  
+}
+
+.animated-shadow {
+  font: normal 50px Varela Round, sans-serif;
+  padding: 2px 0;
+  color: red;
+  letter-spacing: 5px;
+  text-align: center;
+  text-align: center;
+  text-transform: uppercase;
+  animation: move linear 2000ms infinite;
+  z-index: 2
+}
+
+.animated-shadow-2 {
+   font: normal 40px Varela Round, sans-serif;
    padding: 2px 0;
    letter-spacing: 5px;
    text-align: center;
@@ -56,107 +130,84 @@ hr {border: 0;
    z-index: 2
  }
 
- .animated-shadow-2 {
-    font: normal 40px Varela Round, sans-serif;
-    padding: 2px 0;
-    letter-spacing: 5px;
-    text-align: center;
-    text-align: center;
-    text-transform: uppercase;
-    animation: move linear 2000ms infinite;
-    z-index: 2
+/*Animación para rotar las sombras*/
+@keyframes move {
+  0% {
+    text-shadow:
+      4px -4px 0 #da0641,
+      3px -3px 0 #da0641,
+      2px -2px 0 #da0641,
+      1px -1px 0 #da0641,
+      -4px 4px 0 #13f1fc,
+      -3px 3px 0 #13f1fc,
+      -2px 2px 0 #13f1fc,
+      -1px 1px 0 #13f1fc
+    ;
   }
- /*Animación para rotar las sombras*/
- @keyframes move {
-   0% {
-     text-shadow:
-       4px -4px 0 #da0641,
-       3px -3px 0 #da0641,
-       2px -2px 0 #da0641,
-       1px -1px 0 #da0641,
-       -4px 4px 0 #13f1fc,
-       -3px 3px 0 #13f1fc,
-       -2px 2px 0 #13f1fc,
-       -1px 1px 0 #13f1fc
-     ;
-   }
-   25% {
-     text-shadow:
-       -4px -4px 0 #13f1fc,
-       -3px -3px 0 #13f1fc,
-       -2px -2px 0 #13f1fc,
-       -1px -1px 0 #13f1fc,
-       4px 4px 0 #da0641,
-       3px 3px 0 #da0641,
-       2px 2px 0 #da0641,
-       1px 1px 0 #da0641
-     ;
-   }
-   50% {
-     text-shadow:
-       -4px 4px 0 #da0641,
-       -3px 3px 0 #da0641,
-       -2px 2px 0 #da0641,
-       -1px 1px 0 #da0641,
-       4px -4px 0 #13f1fc,
-       3px -3px 0 #13f1fc,
-       2px -2px 0 #13f1fc,
-       1px -1px 0 #13f1fc
-     ;
-   }
-   75% {
-     text-shadow:
-       4px 4px 0 #13f1fc,
-       3px 3px 0 #13f1fc,
-       2px 2px 0 #13f1fc,
-       1px 1px 0 #13f1fc,
-       -4px -4px 0 #da0641,
-       -3px -3px 0 #da0641,
-       -2px -2px 0 #da0641,
-       -1px -1px 0 #da0641
-     ;
-   }
-   100% {
-     text-shadow:
-       4px -4px 0 #da0641,
-       3px -3px 0 #da0641,
-       2px -2px 0 #da0641,
-       1px -1px 0 #da0641,
-       -4px 4px 0 #13f1fc,
-       -3px 3px 0 #13f1fc,
-       -2px 2px 0 #13f1fc,
-       -1px 1px 0 #13f1fc
-     ;
-   }
- }
-
-.score {
-    font-family: 'Courier New', Courier, monospace;
+  25% {
+    text-shadow:
+      -4px -4px 0 #13f1fc,
+      -3px -3px 0 #13f1fc,
+      -2px -2px 0 #13f1fc,
+      -1px -1px 0 #13f1fc,
+      4px 4px 0 #da0641,
+      3px 3px 0 #da0641,
+      2px 2px 0 #da0641,
+      1px 1px 0 #da0641
+    ;
+  }
+  50% {
+    text-shadow:
+      -4px 4px 0 #da0641,
+      -3px 3px 0 #da0641,
+      -2px 2px 0 #da0641,
+      -1px 1px 0 #da0641,
+      4px -4px 0 #13f1fc,
+      3px -3px 0 #13f1fc,
+      2px -2px 0 #13f1fc,
+      1px -1px 0 #13f1fc
+    ;
+  }
+  75% {
+    text-shadow:
+      4px 4px 0 #13f1fc,
+      3px 3px 0 #13f1fc,
+      2px 2px 0 #13f1fc,
+      1px 1px 0 #13f1fc,
+      -4px -4px 0 #da0641,
+      -3px -3px 0 #da0641,
+      -2px -2px 0 #da0641,
+      -1px -1px 0 #da0641
+    ;
+  }
+  100% {
+    text-shadow:
+      4px -4px 0 #da0641,
+      3px -3px 0 #da0641,
+      2px -2px 0 #da0641,
+      1px -1px 0 #da0641,
+      -4px 4px 0 #13f1fc,
+      -3px 3px 0 #13f1fc,
+      -2px 2px 0 #13f1fc,
+      -1px 1px 0 #13f1fc
+    ;
+  }
 }
 
-#progress {
-    font-size: 20px;
-    color: black;
-    font-weight: bold;
-    font-family: sans-serif;
+.numero{
+  position: absolute;
+  opacity:0.3;
+  top: 10px;
+  right: 10px;
+  visibility: hidden;
 }
 
-.btnInicio {
-    width: 100%;
-    margin-top: 40px;
-    border-radius: .3rem;    
-    max-width: 80px;
-    text-align: center;
-    height: 40px;
-    background-color: #0769e9;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
+.puntuacion {
+  padding-bottom: 15px;
+  margin-top: 70px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 25px;
+  font-weight: bold;
+  color: yellow;
 }
-
-.btnInicio:hover {
-    cursor: pointer;
-    background: #083057;
-}
-
 
