--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -7,6 +7,8 @@ body {
   background-image: url(../img/fondo_quiz.jpg);
   margin: 0;
   text-align: center;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .contenedor {
