--- a/styles/DragDrop.css
+++ b/styles/DragDrop.css
@@ -49,7 +49,16 @@ h2 {
 .contenedor-btnInicio {
     justify-content: center;
     text-align: center;
-    margin-top: 100px;
+}
+
+.intentos {
+    text-align: center;
+    font-size: 20px;
+    margin-top: -10px;
+    color: yellow;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-family: sans-serif;
 }
 
 .main-container {
