--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -36,6 +36,15 @@
     justify-content: center;
     height: 70px;
   }
+
+  .videoI {
+    width: 1080px;
+    height: 720px;
+    justify-content: center;
+    text-align: center;
+    padding-top: 120px;
+    margin: 0 auto;
+  }
   
   .nav-link {
     color: white;
